Fix TimeTable Session Text DOJOCON-286

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -17,14 +17,6 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="角田一平のプロフィール画像">
-		</figure>
-		<h2 class="speaker-name">角田　一平</h2>
-		<p class="speaker-description">IPPEI SUMIDA</p>
-		<p><a href="#ippei-sumida" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
-	</li>
-	<li>
-		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">宮島 衣瑛</h2>
@@ -98,9 +90,9 @@
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="ロス・オニールのプロフィール画像">
 		</figure>
-		<!-- <p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
-		<p class="session-time">13:00-13:25</p> -->
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）</h3>
+		<p class="session-time">15:00-15:40</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">ロス・オニール</h2>
@@ -116,40 +108,16 @@
 	</div>
 </div>
 
-<div id="ippei-sumida" class="speaker-profile-box js-speaker-profile-box">
-	<div class="speaker-profile-box-left">
-		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="角田一平のプロフィール画像">
-		</figure>
-		<!-- <p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
-		<p class="session-time">13:00-13:25</p> -->
-	</div>
-	<div class="speaker-profile-box-right">
-		<h2 class="speaker-name">角田　一平</h2>
-		<ul class="speaker-sns">
-			<li><a href="https://www.facebook.com/ippeisumida" class="icon-facebook-circle"></a></li>
-			<li><a href="https://twitter.com/ippey_s" class="icon-twitter-circle"></a></li>
-		</ul>
-		<p class="speaker-description">IPPEI SUMIDA</p>
-		<div class="speaker-profile">
-			<p>CoderDojo西宮・梅田メンター、CoderDojo枚方チャンピオン<br>
-			DojoCon Japan 2016の副実行委員長</p>
-			<p>eb制作会社でのWeb開発の経験を経て、2016年7月からフリーランスとして活動を開始。PHPを利用したWebやiOS,Androidのスマートフォンのアプリの開発に携わる。<br>
-			2013年3月からCoderDojo梅田でメンターとして活動し、主にScratchやJavaScript、スマートフォンアプリのサポートを月に１回ペースで行っている。2016年7月から隔月に1回ペースで大阪府・枚方市でCoderDojoをスタート。<br>
-			道場の運営も行うようになった。</p>
-		</div>
-	</div>
-</div>
-
 <div id="kirie-miyajima" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="宮島衣瑛のプロフィール画像">
 		</figure>
-		<!-- <p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
-		<p class="session-time">13:00-13:25</p> -->
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
+		<p class="session-time">11:25-11:45</p>
+		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">宮島 衣瑛</h2>
@@ -173,7 +141,7 @@
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">Minecraftとプログラミングの可能性</h3>
-		<!-- <p class="session-time">13:00-13:25</p> -->
+		<p class="session-time">13:05-13:25</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">寺園 聖文</h2>
@@ -197,7 +165,7 @@
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">子供でもArduinoを楽しめるBlocklyDuinoの紹介</h3>
-		<!-- <p class="session-time">13:00-13:25</p> -->
+		<p class="session-time">11:45 - 12:05</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">岡田 裕行</h2>
@@ -220,7 +188,9 @@
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">CoderDojo Kodairaの活動について</h3>
-		<!-- <p class="session-time">13:00-13:25</p> -->
+		<p class="session-time">13:45-14:05</p>
+		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">とがぞの</h2>
@@ -240,9 +210,9 @@
 		<figure class="speaker-avator">
 			<img src="//placehold.it/400" alt="東和樹のプロフィール画像">
 		</figure>
-		<!-- <p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを操作できるBlocklyDuinoの紹介</h3>
-		<p class="session-time">13:00-13:25</p> -->
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
+		<p class="session-time">11:25-11:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">東 和樹</h2>
