Add `target="_blank"` to speaker's links

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -71,13 +71,13 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">阿部 和広</h2>
 		<!-- <ul class="speaker-sns">
-			<li><a href="" class="icon-facebook-circle"></a></li>
-			<li><a href="" class="icon-twitter-circle"></a></li>
+			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul> -->
 		<p class="speaker-description">Kazuhiro Abe</p>
 		<div class="speaker-profile">
 			<p>1987年より一貫してオブジェクト指向言語Smalltalkの研究開発に従事。パソコンの父として知られSmalltalkの開発者であるアラン・ケイ博士の指導を2001年から受ける。Squeak EtoysとScratchの日本語版を担当。近年は子供向け講習会を多数開催。OLPC($100 laptop)計画にも参加。</p>
-			<p>著書に「小学生からはじめるわくわくプログラミング」(日経BP社)、共著に「ネットを支えるオープンソースソフトウェアの進化」(角川学芸出版)、監修に「作ることで学ぶ」(オライリー・ジャパン）など。 
+			<p>著書に「小学生からはじめるわくわくプログラミング」(日経BP社)、共著に「ネットを支えるオープンソースソフトウェアの進化」(角川学芸出版)、監修に「作ることで学ぶ」(オライリー・ジャパン）など。
 			<p>多摩美術大学研究員、東京学芸大学・武蔵大学非常勤講師、サイバー大学客員教授を経て、現在、青山学院大学客員教授。 <br>
 			2003年度IPA認定スーパークリエータ。文部科学省プログラミング学習に関する調査研究委員。<br>
 			プログラミング監修 Why!?プログラミング（NHK Eテレ）</p>
@@ -97,8 +97,8 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">ロス・オニール</h2>
 		<!-- <ul class="speaker-sns">
-			<li><a href="" class="icon-facebook-circle"></a></li>
-			<li><a href="" class="icon-twitter-circle"></a></li>
+			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul> -->
 		<p class="speaker-description">Ross O’Neill</p>
 		<div class="speaker-profile">
@@ -122,8 +122,8 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">宮島 衣瑛</h2>
 		<ul class="speaker-sns">
-			<li><a href="https://www.facebook.com/kirie.miyajima" class="icon-facebook-circle"></a></li>
-			<li><a href="https://twitter.com/mjk_0513" class="icon-twitter-circle"></a></li>
+			<li><a href="https://www.facebook.com/kirie.miyajima" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/mjk_0513" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul>
 		<p class="speaker-description">Kirie Miyajima</p>
 		<div class="speaker-profile">
@@ -146,8 +146,8 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">寺園 聖文</h2>
 		<ul class="speaker-sns">
-			<li><a href="https://www.facebook.com/yokmama" class="icon-facebook-circle"></a></li>
-			<li><a href="https://twitter.com/yokmama" class="icon-twitter-circle"></a></li>
+			<li><a href="https://www.facebook.com/yokmama" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/yokmama" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul>
 		<p class="speaker-description">Masafumi Terazono</p>
 		<div class="speaker-profile">
@@ -170,8 +170,8 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">岡田 裕行</h2>
 		<ul class="speaker-sns">
-			<li><a href="https://www.facebook.com/okhiroyuki" class="icon-facebook-circle"></a></li>
-			<li><a href="https://twitter.com/okhiroyuki" class="icon-twitter-circle"></a></li>
+			<li><a href="https://www.facebook.com/okhiroyuki" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/okhiroyuki" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul>
 		<p class="speaker-description">Hiroyuki Okada</p>
 		<div class="speaker-profile">
@@ -195,7 +195,7 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">とがぞの</h2>
 		<ul class="speaker-sns">
-			<li><a href="https://twitter.com/togazo" class="icon-twitter-circle"></a></li>
+			<li><a href="https://twitter.com/togazo" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul>
 		<p class="speaker-description">Togazono</p>
 		<div class="speaker-profile">
@@ -217,8 +217,8 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">東 和樹</h2>
 		<ul class="speaker-sns">
-			<li><a href="https://www.facebook.com/kazuki.higashi.71" class="icon-facebook-circle"></a></li>
-			<!-- <li><a href="" class="icon-twitter-circle"></a></li> -->
+			<li><a href="https://www.facebook.com/kazuki.higashi.71" class="icon-facebook-circle" target="_blank"></a></li>
+			<!-- <li><a href="" class="icon-twitter-circle" target="_blank"></a></li> -->
 		</ul>
 		<p class="speaker-description">HIGASHI, Kazuki</p>
 		<div class="speaker-profile">
