--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1425,7 +1425,12 @@
 				figure {
 					text-align: center;
 				}
-
+				&:nth-child(-n+3){
+					height: 28em;//448px;
+				}
+				&:nth-child(n+4):nth-child(-n+6){
+					// height: 27em;
+				}
 				.description {
 					font-size: 14px;
 					font-weight: $regular;
