Add Speaker Photo #22 #35

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -1,7 +1,7 @@
 <ul class="speakers">
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_abe.jpg' }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">阿部 和広</h2>
 		<p class="speaker-description">Kazuhiro Abe</p>
@@ -9,7 +9,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="ロス・オニールのプロフィール画像">
+			<img src="{{ '/assets/images/speaker_rossoneill.jpg' }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">ロス・オニール</h2>
 		<p class="speaker-description">Ross O’Neill</p>
@@ -17,7 +17,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="宮島衣瑛のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_miyajima.jpg' }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">宮島 衣瑛</h2>
 		<p class="speaker-description">Kirie Miyajima</p>
@@ -25,7 +25,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_terazono.jpg' }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">寺園 聖文</h2>
 		<p class="speaker-description">Masafumi Terazono</p>
@@ -33,7 +33,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_okada.jpg' }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">岡田 裕行</h2>
 		<p class="speaker-description">Hiroyuki Okada</p>
@@ -41,7 +41,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="とがぞののプロフィール画像">
+			<img src="{{ '/assets/images/speaker_togazono.jpg' }}" alt="とがぞののプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">とがぞの</h2>
 		<p class="speaker-description">Togazono</p>
@@ -49,7 +49,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="東和樹のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_higashi.jpg' }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">東 和樹</h2>
 		<p class="speaker-description">HIGASHI, Kazuki</p>
@@ -62,7 +62,7 @@
 <div id="kazuhiro-abe" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="阿部和広のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_abe.jpg' }}" alt="阿部和広のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">基調講演</h3>
@@ -88,7 +88,7 @@
 <div id="ross-o-neill" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="ロス・オニールのプロフィール画像">
+			<img src="{{ '/assets/images/speaker_rossoneill.jpg' }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）</h3>
@@ -111,7 +111,7 @@
 <div id="kirie-miyajima" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="宮島衣瑛のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_miyajima.jpg' }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
@@ -137,7 +137,7 @@
 <div id="masafumi-terazono" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="寺園聖文のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_terazono.jpg' }}" alt="寺園聖文のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">Minecraftとプログラミングの可能性</h3>
@@ -161,7 +161,7 @@
 <div id="hiroyuki-okada" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_okada.jpg' }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">子供でもArduinoを楽しめるBlocklyDuinoの紹介</h3>
@@ -184,7 +184,7 @@
 <div id="togazono" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="とがぞののプロフィール画像">
+			<img src="{{ '/assets/images/speaker_togazono.jpg' }}" alt="とがぞののプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">CoderDojo Kodairaの活動について</h3>
@@ -208,7 +208,7 @@
 <div id="higashi-kazuki" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
-			<img src="//placehold.it/400" alt="東和樹のプロフィール画像">
+			<img src="{{ '/assets/images/speaker_higashi.jpg' }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
