--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1426,11 +1426,16 @@
 					text-align: center;
 				}
 				&:nth-child(-n+3){
-					height: 28em;//448px;
+					height: auto;
+					@include media($s-screen) {
+						height: 32em;
+					}
+					@include media($m-screen) {
+						height: 28em;//448px;
+					}
 				}
-				&:nth-child(n+4):nth-child(-n+6){
-					// height: 27em;
-				}
+				// &:nth-child(n+4):nth-child(-n+6){
+				// }
 				.description {
 					font-size: 14px;
 					font-weight: $regular;
