--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1532,11 +1532,18 @@
 	}
 
 	.speaker-avator {
-		@include size(100px);
-		border-radius: 100px;
-		float: right;
 		margin-top: 30px;
-		overflow: hidden;
+		text-align: right;
+
+		img {
+			@include size(100px);
+			border-radius: 100px;
+			overflow: hidden;
+
+			+ img {
+				margin-left: 20px;
+			}
+		}
 	}
 }
 
