Add icon-desktop-circle. Fix #13

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -71,6 +71,7 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">阿部 和広</h2>
 		<!-- <ul class="speaker-sns">
+			<li><a href="" class="icon-desktop-circle" target="_blank"></a></li>
 			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
 			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul> -->
@@ -97,6 +98,7 @@
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">ロス・オニール</h2>
 		<!-- <ul class="speaker-sns">
+			<li><a href="" class="icon-desktop-circle" target="_blank"></a></li>
 			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
 			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
 		</ul> -->
