--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 		</ul>
 	</div>
 	<a href="#pagetop" class="goto-pagetop icon-angle-up">Page Top</a>
-	<p class="copyright">© DojoCon Japan 2016</p>
+	<p class="copyright">© DojoCon Japan 2016 / [利用しているScratchのブロック画像] CC BY-SA 2.0 / Scratch is developed by the Lifelong Kindergarten Group at the MIT Media Lab. See <a href="http://scratch.mit.edu">http://scratch.mit.edu</a>.</p>
 </footer>
 
 <script src="https://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
