Add Speaker PopUp Link / #13

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -70,11 +70,6 @@
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">阿部 和広</h2>
-		<!-- <ul class="speaker-sns">
-			<li><a href="" class="icon-desktop-circle" target="_blank"></a></li>
-			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
-			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
-		</ul> -->
 		<p class="speaker-description">Kazuhiro Abe</p>
 		<div class="speaker-profile">
 			<p>1987年より一貫してオブジェクト指向言語Smalltalkの研究開発に従事。パソコンの父として知られSmalltalkの開発者であるアラン・ケイ博士の指導を2001年から受ける。Squeak EtoysとScratchの日本語版を担当。近年は子供向け講習会を多数開催。OLPC($100 laptop)計画にも参加。</p>
@@ -97,11 +92,9 @@
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">ロス・オニール</h2>
-		<!-- <ul class="speaker-sns">
-			<li><a href="" class="icon-desktop-circle" target="_blank"></a></li>
-			<li><a href="" class="icon-facebook-circle" target="_blank"></a></li>
-			<li><a href="" class="icon-twitter-circle" target="_blank"></a></li>
-		</ul> -->
+		<ul class="speaker-sns">
+			<li><a href="https://coderdojo.com/about/coderdojo-foundation/" class="icon-desktop-circle" target="_blank"></a></li>
+		</ul>
 		<p class="speaker-description">Ross O’Neill</p>
 		<div class="speaker-profile">
 			<p>アイルランドのCoderDojo財団のコミュニケーション・コミュニティリードとして世界中に広がるCoderDojo活動を支える役割を担う。ダブリン工科大学で電子計算学を専攻し卒業。フリーランスのフィンテック（金融テクノロジー）＆データジャーナリストとしてアイルランドのサンデイ・ビジネス・ポスト(Sunday Business Post)誌に記事を頻繁に掲載し、アイルランドのテクノロジー・ジャーナリスト協会のメンバーでもある。SWICN Intel Computer Clubhouse Dojoのメンターとしてのボランティア活動でも活躍。このアイルランドのDojoは小規模でスタートして以来発展し続けている。子供にコーディングを教えること以外に楽しんでいることは、ワインテイスティング、旅行、いろんなコンピュータゲームで宇宙を救うこと。</p>
@@ -220,7 +213,6 @@
 		<h2 class="speaker-name">東 和樹</h2>
 		<ul class="speaker-sns">
 			<li><a href="https://www.facebook.com/kazuki.higashi.71" class="icon-facebook-circle" target="_blank"></a></li>
-			<!-- <li><a href="" class="icon-twitter-circle" target="_blank"></a></li> -->
 		</ul>
 		<p class="speaker-description">HIGASHI, Kazuki</p>
 		<div class="speaker-profile">
