--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="post-header">
-	<h1 class="page-title"><a href="{{ '/#news' | prepend: site.baseurl }}" class="en">News</a></h1>
+	<h1 class="archive-title"><a href="{{ '/#news' | prepend: site.baseurl }}" class="en">News</a></h1>
 	<h1 class="post-title">{{ page.title }}</h1>
 	<p class="post-meta">{{ page.date | date: "%Y.%m.%d" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 	{% if page.thumbnail %}
