--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -17,6 +17,14 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">細谷 崇</h2>
+		<p class="speaker-description">Takashi Hosoya</p>
+		<p><a href="#takashi-hosoya" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
 			<img src="{{ '/assets/images/speaker-miyajima.jpg' | prepend: site.baseurl }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">宮島 衣瑛</h2>
@@ -25,7 +33,7 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
-			<img src="{{ '/assets/images/speaker-terazono.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker-terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">寺園 聖文</h2>
 		<p class="speaker-description">Masafumi Terazono</p>
@@ -99,6 +107,32 @@
 		<div class="speaker-profile">
 			<p>アイルランドのCoderDojo財団のコミュニケーション・コミュニティリードとして世界中に広がるCoderDojo活動を支える役割を担う。ダブリン工科大学で電子計算学を専攻し卒業。フリーランスのフィンテック（金融テクノロジー）＆データジャーナリストとしてアイルランドのサンデイ・ビジネス・ポスト(Sunday Business Post)誌に記事を頻繁に掲載し、アイルランドのテクノロジー・ジャーナリスト協会のメンバーでもある。SWICN Intel Computer Clubhouse Dojoのメンターとしてのボランティア活動でも活躍。このアイルランドのDojoは小規模でスタートして以来発展し続けている。子供にコーディングを教えること以外に楽しんでいることは、ワインテイスティング、旅行、いろんなコンピュータゲームで宇宙を救うこと。</p>
 			<p>登壇方法は現在調整中</p>
+		</div>
+	</div>
+</div>
+
+<div id="takashi-hosoya" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title">オープニングセレモニー</h3>
+		<p class="session-time">10:30-10:40</p>
+		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<p class="session-time">15:40-16:20</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">細谷 崇</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/takashi.hosoya" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/tkc49" class="icon-twitter-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Takashi Hosoya</p>
+		<div class="speaker-profile">
+			<p>2015年3月にNPO法人の役員を退任し、現在はフリーランスとしてWordPressを使ったWEBシステムの構築、kintoneを使った業務システムの構築をしています。</p>
+			<p>CoderDojoは2012年12月西宮、2014年1月に梅田を開始し、約3年半CoderDojoの運営をしています。<br>
+			CoderDojoの無料で子供達が参加できることや、エンジニアがボランティアで関われる仕組みにとても共感し、日本にたくさんのCoderDojoができたらいいなと思い、本イベントのDojoCon Japanの実行委員長をしています。</p>
 		</div>
 	</div>
 </div>
