Add Session Profile / Change Speaker Profile #70

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -237,7 +237,7 @@
 			<img src="{{ '/assets/images/speaker-togazono.jpg' | prepend: site.baseurl }}" alt="とがぞののプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">CoderDojo Kodairaの活動について</h3>
+		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について</a></h3>
 		<p class="session-time">13:45-14:05</p>
 		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
 		<p class="session-time">15:40-16:20</p>
@@ -249,8 +249,7 @@
 		</ul>
 		<p class="speaker-description">Togazono</p>
 		<div class="speaker-profile">
-			<p>CoderDojo Kodairaは2014年に発足しました。発足3ヶ月足らずで活動を休止し、9ヶ月後に再開して現在に至ります。コンピュータサイエンスやテクノロジーアートとは縁遠い人達にこそ新しい場を開きたくて、敢えて活動に共感する仲間が殆どいないプチ田舎で活動しています。</p>
-			<p>「放課後の居場所のひとつ」を目指して平日夕方に開催している点や、保護者に「もっと安価にPCを入手する方法を知って欲しい」とバルク品のPCを再利用している点など、お節介心が勢い余って「なんでそんな手間で面倒なことを…」と傍目に思われるような方向から攻めている部分を紹介できたらと思います。</p>
+			<p>CoderDojo Kodairaの代表で近隣Dojoのメンター。大学を卒業後、公共サービス系システムのエンジニアとして数年従事。幾つかの雇用形態で職を転々とした後、2年間引きこもり生活を実践。世の中にはびこる「当たり前」の真偽に興味を持ち、あれやこれやと仮説立て・実践・検証を繰り返すうちに数年経過。「武蔵野・多摩地域を時々徘徊する素浪人」なる立ち位置を確立させようと日々邁進しつつ「地域xITx教育」をキーワードにK-12教育の現場に爪足を突っ込んで現在に至る。趣味は生きること。しようもないものづくりも好き。手先と人間性が非常に不器用。好きな言葉は「試行錯誤」と「スクラップ・アンド・ビルド」。</p>
 		</div>
 	</div>
 </div>
