Add a universal modal window function

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -237,7 +237,7 @@
 			<img src="{{ '/assets/images/speaker-togazono.jpg' | prepend: site.baseurl }}" alt="とがぞののプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について</a></h3>
+		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-fancybox-trigger">CoderDojo Kodairaの活動について</a></h3>
 		<p class="session-time">13:45-14:05</p>
 		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
 		<p class="session-time">15:40-16:20</p>
