--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -90,6 +90,13 @@ button,
 	&.button-block {
 		display: block;
 	}
+
+	&.button-disabled {
+		background: $silver;
+		color: #fff;
+		cursor: default;
+		pointer-events: none;
+	}
 }
 
 @mixin ul() {
