--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: compress
 ---
 
-{% assign homeurl = '/' | prepend: site.baseurl %}
+{% include variables.html %}
 
 {% include header.html %}
 
